# geo_boolean_difference_panic

./: Cargo.toml  README.md
.github/workflows/: run.yml
src/: main.rs
test_data/: boolean_difference_polygons.json  boolean_difference_subject_multipolygon.json
tests/: failure_test.rs
