[package]
name = "geo_boolean_difference_panic"
version = "0.1.0"
edition = "2021"
authors = ["Deca Technologies <info@decatechnologies.com>"]

[dependencies]
geo = "0.23.1"
serde = "1.0.152"
serde_any = "0.5.0"

[dependencies.geo-types]
default-features = false
features = ["serde"]
version = "0.7.8"

[dev-dependencies]
assert_cmd = "2.0.4"
pretty_assertions = "1.2.1"
rstest = "0.15.0"
